2025-08-17T02:23:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17015622659 # 1165
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-17
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1155 5779 / 1177 5817
* notice: next accum: outdated-unq outdated-all / unq all: 1158 5782 / 1177 5817
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-02] / []

2025-08-16T12:51:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17008597730 # 1164
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-16
* notice: last 14d: unq all: 10 37
* notice: prev accum: outdated-unq outdated-all / unq all: 1155 5779 / 1176 5816
* notice: next accum: outdated-unq outdated-all / unq all: 1155 5779 / 1177 5817
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-02 2025-08-16]

2025-08-15T12:54:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16990390140 # 1162
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-15
* notice: last 14d: unq all: 10 37
* notice: prev accum: outdated-unq outdated-all / unq all: 1154 5778 / 1175 5815
* notice: next accum: outdated-unq outdated-all / unq all: 1155 5779 / 1176 5816
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-01] / [2025-08-15]

2025-08-14T12:58:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16965818949 # 1160