@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-04T02:35:43Z",
-  "count" : 19,
-  "count_minmax" : [ 8, 19 ],
-  "count_decinc" : [ -0, +19 ],
-  "uniques" : 3,
+  "timestamp" : "2025-08-17T12:52:33Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 19 ],
+  "count_decinc" : [ -17, +19 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -2, +3 ]
 }
