@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-17T02:23:32Z",
+  "timestamp" : "2025-08-17T12:52:33Z",
   "count_outdated" : 5782,
   "uniques_outdated" : 1158,
-  "count" : 5817,
-  "uniques" : 1177,
+  "count" : 5818,
+  "uniques" : 1178,
   "views" : [
     {
       "timestamp": "2025-08-03T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 8, 19 ],
-      "count_decinc": [ 0, 19 ],
-      "uniques": 3,
+      "count": 2,
+      "count_minmax": [ 2, 19 ],
+      "count_decinc": [ 17, 19 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2025-08-04T00:00:00Z",
@@ -124,6 +124,15 @@
     },
     {
       "timestamp": "2025-08-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
