@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 8,
+  "count": 19,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2025-08-03T00:00:00Z",
-      "count": 19,
-      "uniques": 3
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2025-08-04T00:00:00Z",
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2025-08-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
