@@ -1,3 +1,12 @@
+2025-08-17T12:52:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17021246701 # 1166
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-17
+* notice: last 14d: unq all: 6 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 1158 5782 / 1177 5817
+* notice: next accum: outdated-unq outdated-all / unq all: 1158 5782 / 1178 5818
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -17 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-08-03 2025-08-17]
+
 2025-08-17T02:23:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17015622659 # 1165
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-17
